--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 \usepackage{xifthen}
 \usepackage{xspace}
 
-
+\usepackage{microtype}
 
 \usepackage[cmex10]{amsmath}
 \usepackage{amssymb}
@@ -85,7 +85,7 @@
 
 
 \begin{document}
-\title{A Detection Mechanism for Internal Attacks on Pull-based P2P Video Streaming Systems}
+\title{A Detection Mechanism for Internal Attacks on Pull-based P2P Streaming Systems}
 
 % \author{
 %     \IEEEauthorblockN{Hatem Ismail\IEEEauthorrefmark{1}, Stefanie Roos\IEEEauthorrefmark{2}, Giang Nguyen\IEEEauthorrefmark{3}, Neeraj Suri\IEEEauthorrefmark{1}}
